--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet">
-  <link href="font.css" rel="stylesheet">
+  <link href="dist/style.css" rel="stylesheet">
+  <link href="dist/font.css" rel="stylesheet">
   <title>Interior Design</title>
 </head>
 <body>
@@ -200,6 +200,6 @@
 
 </div>
 <!-- End Photo  -->
-    <script src="script.js"></script>
+    <script src="dist/script.js"></script>
 </body>
 </html>
